Upgrade test compilation and execution to Java 25 (#3210)
* Upgrade test compilation and execution to Java 25

Signed-off-by: Marvin Froeder <velo.br@gmail.com>

* Apply OpenRewrite UpgradeToJava25 on test sources and fix Lombok val compatibility

Signed-off-by: Marvin Froeder <velo.br@gmail.com>

* Update TrustingSSLSocketFactory to use TLS and ECDHE cipher suite for Java 25 compatibility

Signed-off-by: Marvin Froeder <velo.br@gmail.com>

---------

Signed-off-by: Marvin Froeder <velo.br@gmail.com>